# qtcode

./: .env.example  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PROMPT.md  README.md  SECURITY.md
.cursor/: hooks.json  mcp.json
.cursor/rules/: memory-workflow.mdc
.github/: pull_request_template.md
.qtcode/: config.yaml  workspace.yaml
cmake/: QtCodeCompilerOptions.cmake  QtCodeDependencies.cmake  QtCodeHelpers.cmake
docs/: README.md  github-repo-conventions.md  toolchain-requirements.md
docs/design/: product-spec.md  (+4 more)
scripts/: README.md  build-app  check-toolchain  index-memory  run-memory-mcp  save-agent-context  search-agent-context  search-memory  setup-memory-db  test-app
src/: CMakeLists.txt
src/agents/: AgentAdapter.cpp  AgentAdapter.h  AgentManager.cpp  AgentManager.h  AgentModels.cpp  AgentModels.h  AgentOptions.cpp  AgentOptions.h  AgentSession.cpp  AgentSession.h  CMakeLists.txt  DiffApplier.cpp  DiffApplier.h
src/agents/adapters/: AiderAgentAdapter.h  ClaudeAgentAdapter.h  CodexAgentAdapter.cpp  CodexAgentAdapter.h  CursorAgentAdapter.cpp  CursorAgentAdapter.h
src/app/: CMakeLists.txt  QtCodeApplication.cpp  QtCodeApplication.h  main.cpp
src/commands/: CMakeLists.txt  CommandLibraryService.cpp  CommandLibraryService.h  QtCommandModels.cpp  QtCommandModels.h  QtCommandYamlParser.cpp  QtCommandYamlParser.h
src/core/: AppConfigService.cpp  AppConfigService.h  ApplicationController.cpp  ApplicationController.h  CMakeLists.txt  CliCapabilityModels.h  CliCapabilityService.cpp  CliCapabilityService.h  ContextManager.cpp  ContextManager.h  FileOperationService.cpp  FileOperationService.h  McpServerService.cpp  McpServerService.h  ProjectManager.cpp  ProjectManager.h  RepoConfigLoader.cpp  RepoConfigLoader.h  RepoConfigWriter.cpp  RepoConfigWriter.h  SettingsService.cpp  SettingsService.h  StatusModels.h  StatusService.cpp  StatusService.h  WorkspaceInstaller.cpp  WorkspaceInstaller.h  WorkspaceModels.h
src/git/: CMakeLists.txt  GitCliClient.cpp  GitCliClient.h  GitCommitSummary.h  GitOperationResult.h  GitRepository.h  GitService.cpp  GitService.h  GitStatus.h
src/github/: CMakeLists.txt  GhCliClient.cpp  GhCliClient.h  GitHubCachePolicy.cpp  GitHubCachePolicy.h  GitHubContextFormatting.cpp  GitHubContextFormatting.h  GitHubIssueBranchNaming.cpp  GitHubIssueBranchNaming.h  GitHubModels.h  GitHubRemoteResolver.cpp  GitHubRemoteResolver.h  GitHubService.cpp  GitHubService.h
src/memory/: CMakeLists.txt  ContextResult.cpp  ContextResult.h  McpClient.cpp  McpClient.h  McpClientError.cpp  McpClientError.h  McpHealthResult.cpp  McpHealthResult.h  MemorySearchModels.h  MemoryService.cpp  MemoryService.h
src/settings/: AppConfig.cpp  AppConfig.h  McpServerModels.cpp  McpServerModels.h  ProjectModels.h  RepoConfig.h  SettingsModels.cpp  SettingsModels.h
src/shared/: CMakeLists.txt  Logging.cpp  Logging.h  PerformanceTimer.cpp  PerformanceTimer.h  ProcessRunner.cpp  ProcessRunner.h  Result.h  SecretStore.cpp  SecretStore.h
src/storage/: CMakeLists.txt  MigrationRunner.cpp  MigrationRunner.h  StorageService.cpp  StorageService.h  StorageTransaction.cpp  StorageTransaction.h
src/storage/repositories/: AgentSessionRepository.cpp  AgentSessionRepository.h  ContextRetrievalRepository.cpp  ContextRetrievalRepository.h  GitHubCacheRepository.cpp  GitHubCacheRepository.h  McpServerRepository.cpp  McpServerRepository.h  ProjectRepository.cpp  ProjectRepository.h  SettingsRepository.cpp  SettingsRepository.h  TerminalProfileStore.cpp  TerminalProfileStore.h  TerminalSessionRepository.cpp  TerminalSessionRepository.h
src/terminal/: CMakeLists.txt  TerminalManager.cpp  TerminalManager.h  TerminalProfile.cpp  TerminalProfile.h  TerminalSession.h
src/ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  StatusBar.cpp  StatusBar.h
src/ui/dialogs/: ChangeRepositoryDialog.cpp  ChangeRepositoryDialog.h  CreateIssueBranchDialog.cpp  CreateIssueBranchDialog.h  McpServerDialog.cpp  McpServerDialog.h  SettingsDialog.cpp  SettingsDialog.h  StageChangesDialog.cpp  StageChangesDialog.h
src/ui/models/: AgentSessionModel.h  GitStatusModel.h  RepositoryListModel.cpp  RepositoryListModel.h  TerminalTabModel.h
src/ui/panels/: AgentPanel.cpp  AgentPanel.h  EditorTab.cpp  EditorTab.h  FileTreePanel.cpp  FileTreePanel.h  McpServerPanel.cpp  McpServerPanel.h  ProjectNavigationPanel.cpp  ProjectNavigationPanel.h  RepositoryPanel.cpp  RepositoryPanel.h  TerminalPanel.cpp  TerminalPanel.h  WorkspaceTabs.cpp  WorkspaceTabs.h
src/ui/views/: ContextResultsView.cpp  ContextResultsView.h  ConversationFormatting.cpp  ConversationFormatting.h  ConversationTurnWidget.cpp  ConversationTurnWidget.h  ConversationTurns.cpp  ConversationTurns.h  ConversationView.cpp  ConversationView.h  DiffReviewView.cpp  DiffReviewView.h  GitHubDetailView.cpp  GitHubDetailView.h  RepoHelpView.cpp  RepoHelpView.h
src/ui/widgets/: CollapsibleSection.cpp  CollapsibleSection.h
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/agents/: AgentManagerActiveSessionTest.cpp  AgentManagerConversationTest.cpp  AgentManagerDeleteSessionTest.cpp  CodexAgentAdapterTest.cpp  CursorAgentAdapterTest.cpp
tests/unit/commands/: CommandLibraryServiceTest.cpp
tests/unit/core/: AppConfigServiceTest.cpp  FileOperationServiceTest.cpp  RepoConfigLoaderTest.cpp  RepoConfigWriterTest.cpp  WorkspaceInstallerTest.cpp
tests/unit/git/: GitCliClientTest.cpp  GitServiceTest.cpp
tests/unit/github/: GitHubIssueBranchNamingTest.cpp
tests/unit/memory/: ContextResultTest.cpp
tests/unit/settings/: PanelLayoutSettingsTest.cpp
tests/unit/storage/: MigrationRunnerTest.cpp  SettingsPersistenceTest.cpp
tests/unit/terminal/: TerminalManagerWorkingDirectoryTest.cpp
tests/unit/ui/: ConversationTurnWidgetTest.cpp  ConversationTurnsTest.cpp  ConversationViewTest.cpp  RepoHelpViewTest.cpp  WorkspaceTabsTest.cpp
tools/: agent_context.py  index_memory.py  mcp-memory-setup.md  mcp_memory_server.py  memory_common.py  memory_retrieval.py  save_agent_context.py  search_agent_context.py  search_memory.py
(+70 files in other folders)
